SPDB-147: build: add SPDB Jira key to build and output it to the log

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -195,9 +195,16 @@ if(GIT_FOUND AND EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/.git")
   if (rv AND NOT rv EQUAL 0)
     execute_process(WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}" OUTPUT_VARIABLE GIT_TAG COMMAND "${GIT_EXECUTABLE}" describe --tags --exact-match OUTPUT_STRIP_TRAILING_WHITESPACE)
   endif()
+  execute_process(WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}" OUTPUT_VARIABLE SPDB_KEY RESULT_VARIABLE rv COMMAND "${GIT_EXECUTABLE}" log -1 --format=%s HEAD OUTPUT_STRIP_TRAILING_WHITESPACE)
+  if ((rv AND NOT rv EQUAL 0) OR NOT "${SPDB_KEY}" MATCHES "^SPDB-[0-9]+: .*$")
+    set(SPDB_KEY SPDB-?)
+  else()
+    string(REGEX MATCH "^SPDB-[0-9]+" SPDB_KEY "${SPDB_KEY}")
+  endif()
 else()
   set(GIT_SHA 0)
   set(GIT_MOD 1)
+  set(SPDB_KEY SPDB-?)
 endif()
 string(REGEX REPLACE "[^0-9a-fA-F]+" "" GIT_SHA "${GIT_SHA}")
 string(REGEX REPLACE "[^0-9: /-]+" "" GIT_DATE "${GIT_DATE}")
