--- a/util/build_version.cc.in
+++ b/util/build_version.cc.in
@@ -9,6 +9,7 @@
 // on whether or not GIT is available and the platform settings
 static const std::string rocksdb_build_git_sha  = "speedb_build_git_sha:@GIT_SHA@";
 static const std::string rocksdb_build_git_tag = "speedb_build_git_tag:@GIT_TAG@";
+static const std::string speedb_build_spdb_key = "speedb_build_spdb_key:@SPDB_KEY@";
 #define HAS_GIT_CHANGES @GIT_MOD@
 #if HAS_GIT_CHANGES == 0
 // If HAS_GIT_CHANGES is 0, the GIT date is used.
@@ -38,6 +39,7 @@ static std::unordered_map<std::string, std::string>* LoadPropertiesSet() {
   AddProperty(properties, rocksdb_build_git_sha);
   AddProperty(properties, rocksdb_build_git_tag);
   AddProperty(properties, rocksdb_build_date);
+  AddProperty(properties, speedb_build_spdb_key);
   return properties;
 }
 
