--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -744,6 +744,7 @@ set(SOURCES
         memtable/alloc_tracker.cc
         memtable/hash_linklist_rep.cc
         memtable/hash_skiplist_rep.cc
+        memtable/hash_spd_rep.cc
         memtable/skiplistrep.cc
         memtable/vectorrep.cc
         memtable/write_buffer_manager.cc
