SPDB-510: ci: add a dummy test stage to unblock the pipeline
It seems that the GitLab runner doesn't like it when a lone
.pre stage exists in the pipeline with no other stage after
it, so after SPDB-498 pipelines got stuck in "checking pipeline
status". Add a dummy test stage to appease the runner.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,3 +17,14 @@ verify_merge:
       dotenv: merge.env
   only:
     - merge_requests
+
+fuzzing:
+  stage: test
+  script:
+    - echo "running fuzz"
+  variables:
+    GIT_STRATEGY: none
+  only:
+    - merge_requests
+  dependencies:
+    - verify_merge
