SPDB-347: Add a version number to our builds
The change set includes two main things:
1) A header file that contains the Major, Minor, and Patch versions of speedb
as a macro, as well as a set of functions returning info about how/when/where
this version of speedb was created.
2) A new job for the CI that updates the version

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,3 +28,20 @@ fuzzing:
     - merge_requests
   dependencies:
     - verify_merge
+
+bump_version:
+  stage: deploy
+  variables:
+    VERSION_HEADER: $CI_PROJECT_DIR/speedb/version.h
+  before_script:
+    - apk add git
+    - apk add python3
+  script:
+    - >
+      $CI_PROJECT_DIR/tools/bump_version.py --version "$VERSION_HEADER"
+      --target "$CI_MERGE_REQUEST_TARGET_BRANCH_NAME"
+  only:
+    - merge_requests
+  dependencies:
+    - verify_merge
+    - fuzzing
