SPDB-544: ci: add lint checks for Python and shell code
This uses lint-diffs to only check the diff and output errors from
multiple linters.

For Python we use flake8 and for shell code we use shellcheck. However,
we can't use clang-tidy without generating a compilation database, which
the linting stage in the pipeline shouldn't do (as it requires cmake and
a compiler installed) and format-diff.sh doesn't generate output that can
be consumed by lint-diffs, so this commit instead adds a wrapper script
around clang-format so we can continue to lint only code style violations.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,8 @@ verify_merge:
   stage: .pre
   before_script:
     - *base_packages
-    - apk add clang-extra-tools
+    - apk add py3-pip clang-extra-tools shellcheck
+    - python3 -m pip install lint-diffs flake8
   script:
     - export "PATH=$PATH:/usr/share/clang"
     - JIRA_ID=$($CI_PROJECT_DIR/tools/spdb_git_merge_check.sh "$CI_COMMIT_REF_NAME" "$CI_MERGE_REQUEST_TARGET_BRANCH_NAME")
