SPDB-553: build: support sccache in the CMake config
Currently the CMake config only looks for ccache, so developers using
sccache need to manually set the launch commands. Add a check for sccache
to spare them the trouble.

While at it, clean up the CMake config and remove ccache as the link launch
wrapper since it will just forward to the underlying linker anyway, and
also regenerate the buck TARGETS file (we might want to drop support for
it at some point, but for now let's keep it consistent).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,11 +56,17 @@ if(NOT CMAKE_BUILD_TYPE)
     "Default BUILD_TYPE is ${default_build_type}" FORCE)
 endif()
 
-find_program(CCACHE_FOUND ccache)
-if(CCACHE_FOUND)
-  set_property(GLOBAL PROPERTY RULE_LAUNCH_COMPILE ccache)
-  set_property(GLOBAL PROPERTY RULE_LAUNCH_LINK ccache)
-endif(CCACHE_FOUND)
+find_program(SCCACHE_FOUND sccache)
+if(SCCACHE_FOUND)
+  set(CMAKE_C_COMPILER_LAUNCHER sccache CACHE STRING "C_LANUCHER is sccache" FORCE)
+  set(CMAKE_CXX_COMPILER_LAUNCHER sccache CACHE STRING "CXX_LANUCHER is sccache" FORCE)
+else()
+  find_program(CCACHE_FOUND ccache)
+  if(CCACHE_FOUND)
+    set(CMAKE_C_COMPILER_LAUNCHER ccache CACHE STRING "C_LANUCHER is ccache" FORCE)
+    set(CMAKE_CXX_COMPILER_LAUNCHER ccache CACHE STRING "CXX_LANUCHER is ccache" FORCE)
+  endif(CCACHE_FOUND)
+endif()
 
 option(WITH_JEMALLOC "build with JeMalloc" OFF)
 option(WITH_LIBURING "build with liburing" ON)
