SPDB-555: ci: configure a cache for all builds
Currently we build everything as a sanity check to ensure that broken code
doesn't get committed into master. This takes a long time, and there's
no reason to repeat it on every MR if we only want to know that the code
successfully builds.

Add ccache and configure a runner cache for the build verification job (for
now let's use the ccache default of 5GB. It should suffice for the current
size of the code. We might want to change that in the future by setting
the CCACHE_MAXSIZE environment variable).

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,8 +28,9 @@ verify_build:
   stage: build
   before_script:
     - *base_packages
-    - apk add gcc g++ cmake ninja
+    - apk add gcc g++ cmake ninja ccache
     - apk add openjdk10 gflags-dev snappy-dev lz4-dev bzip2-dev zstd-dev zlib-dev linux-headers
+    - mkdir -p "${CI_PROJECT_DIR}/.ccache"
   script:
     - |
       if [ -d "$CI_PROJECT_DIR/build" ]; then
@@ -37,6 +38,9 @@ verify_build:
       fi
     - mkdir -p "$CI_PROJECT_DIR/build"
     - cd "$CI_PROJECT_DIR/build"
+    - export "CCACHE_BASEDIR=$CI_PROJECT_DIR"
+    - export "CCACHE_DIR=$CI_PROJECT_DIR/.ccache"
+    - export "CCACHE_COMPILERCHECK=content"
     - >
       cmake .. -GNinja -DWITH_GFLAGS=1
       -DWITH_ZLIB=1 -DWITH_SNAPPY=1 -DWITH_BZ2=1 -DWITH_LZ4=1 -DWITH_ZSTD=1
@@ -44,6 +48,10 @@ verify_build:
       -DWITH_BENCHMARK_TOOLS=1 -DWITH_CORE_TOOLS=1 -DWITH_TOOLS=1
       -DWITH_TESTS=1 -DWITH_ALL_TESTS=1 -DWITH_EXAMPLES=1
     - ninja
+  cache:
+    key: $CI_JOB_NAME
+    paths:
+      - $CI_PROJECT_DIR/.ccache/
   only:
     - merge_requests
 
